unpackaged/main/default/objects/AcctSeed__Project__c/fields/AcctSeed__Budgeted_Amount__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Budgeted_Amount__c</fullName>
    <description>Summary of Expense budgeted at the Project Task Level.</description>
    <inlineHelpText>Summary of Expense budgeted at the Project Task Level.</inlineHelpText>
    <label>Budgeted Expense</label>
    <summarizedField>AcctSeed__Project_Task__c.AcctSeed__Budgeted_Amount__c</summarizedField>
    <summaryForeignKey>AcctSeed__Project_Task__c.AcctSeed__Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>