unpackaged/main/default/objects/AcctSeed__Project__c/fields/AcctSeed__Revenue_Recognition_Method__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Revenue_Recognition_Method__c</fullName>
    <inlineHelpText>Used to identify the revenue recognition method used for the project.</inlineHelpText>
    <label>Revenue Recognition Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cost Only</fullName>
                <default>true</default>
                <label>Cost Only</label>
            </value>
            <value>
                <fullName>Time &amp; Materials in Period Invoiced</fullName>
            </value>
            <value>
                <fullName>Fixed Price in Period Invoiced</fullName>
            </value>
            <value>
                <fullName>Fixed Price Scheduled Revenue</fullName>
            </value>
            <value>
                <fullName>Fixed Price Percent Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>