unpackaged/main/default/objects/AcctSeed__Project__c/fields/AcctSeed__Template_Project__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Template_Project__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Denotes whether the project is a template project. A template project is used to clone a new project sourced from an opportunity</inlineHelpText>
    <label>Template Project</label>
    <type>Checkbox</type>
</CustomField>