unpackaged/main/default/objects/AcctSeed__Project__c/fields/AcctSeedERP__Template_Type__c.field-meta.xml
<CustomField>
    <fullName>AcctSeedERP__Template_Type__c</fullName>
    <label>Template Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Professional Services Project</fullName>
            </value>
            <value>
                <fullName>Work Order</fullName>
            </value>
            <value>
                <fullName>Service Order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>