unpackaged/main/default/objects/AcctSeed__Project__c/fields/Auto_Populate_AE_PM__c.field-meta.xml
<CustomField>
    <fullName>Auto_Populate_AE_PM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Populate AE &amp; PM ?</label>
    <type>Checkbox</type>
</CustomField>