unpackaged/main/default/objects/AcctSeed__Project__c/fields/Connectwise_Migration_Flag__c.field-meta.xml
<CustomField>
    <fullName>Connectwise_Migration_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Connectwise Migration Flag</label>
    <type>Checkbox</type>
</CustomField>