unpackaged/main/default/objects/AcctSeed__Project__c/fields/D_and_A_End_Date_rollup__c.field-meta.xml
<CustomField>
    <fullName>D_and_A_End_Date_rollup__c</fullName>
    <description>This field contains the scheduled date to close out recipt of a Delivery &amp; Acceptance Certificate or Tech Work Order.</description>
    <inlineHelpText>This field contains the scheduled date to close out recipt of a Delivery &amp; Acceptance Certificate or Tech Work Order.</inlineHelpText>
    <label>Project D&amp;A End Date Rollup</label>
    <summarizedField>AcctSeed__Project_Task__c.AcctSeed__End_Date__c</summarizedField>
    <summaryFilterItems>
        <field>AcctSeed__Project_Task__c.Name</field>
        <operation>equals</operation>
        <value>Delivery &amp; Acceptance Signed</value>
    </summaryFilterItems>
    <summaryForeignKey>AcctSeed__Project_Task__c.AcctSeed__Project__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>