unpackaged/main/default/objects/AcctSeed__Project__c/fields/Image_Technician__c.field-meta.xml
<CustomField>
    <fullName>Image_Technician__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Image Technician</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects1</relationshipName>
    <type>Lookup</type>
</CustomField>