unpackaged/main/default/objects/AcctSeed__Project__c/fields/Installer_1__c.field-meta.xml
<CustomField>
    <fullName>Installer_1__c</fullName>
    <formula>AcctSeed__Opportunity__r.Installer_1__r.FirstName + " " + AcctSeed__Opportunity__r.Installer_1__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Installer 1</label>
    <type>Text</type>
</CustomField>