unpackaged/main/default/objects/AcctSeed__Project__c/fields/Installer_2__c.field-meta.xml
<CustomField>
    <fullName>Installer_2__c</fullName>
    <formula>AcctSeed__Opportunity__r.Installer_2__r.FirstName + " " +  AcctSeed__Opportunity__r.Installer_2__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Installer 2</label>
    <type>Text</type>
</CustomField>