unpackaged/main/default/objects/AcctSeed__Project__c/fields/Notes_Count__c.field-meta.xml
<CustomField>
    <fullName>Notes_Count__c</fullName>
    <label>Notes Count</label>
    <summaryForeignKey>Project_Notes__c.Project__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>