unpackaged/main/default/objects/AcctSeed__Project__c/fields/OPP_Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>OPP_Closed_Date__c</fullName>
    <formula>AcctSeed__Opportunity__r.CloseDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OPP Closed Date</label>
    <type>Date</type>
</CustomField>