unpackaged/main/default/objects/AcctSeed__Project__c/fields/Opp_Net_Book_Amnt__c.field-meta.xml
<CustomField>
    <fullName>Opp_Net_Book_Amnt__c</fullName>
    <formula>AcctSeed__Opportunity__r.Net_Opportunity_Booking_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OPP Net Booking Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>