unpackaged/main/default/objects/AcctSeed__Project__c/fields/OPP_PM_ID__c.field-meta.xml
<CustomField>
    <fullName>OPP_PM_ID__c</fullName>
    <formula>AcctSeed__Opportunity__r.OP_Project_Manager__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OPP PM ID</label>
    <type>Text</type>
</CustomField>