unpackaged/main/default/objects/AcctSeed__Project__c/fields/Opportunity_Ops_Category__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Ops_Category__c</fullName>
    <formula>Text( AcctSeed__Opportunity__r.OPS_Category__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Ops Category</label>
    <type>Text</type>
</CustomField>