unpackaged/main/default/objects/AcctSeed__Project__c/fields/OppProjectFlag__c.field-meta.xml
<CustomField>
    <fullName>OppProjectFlag__c</fullName>
    <formula>AcctSeed__Opportunity__r.Project_Record_Created__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OppProjectFlag</label>
    <type>Checkbox</type>
</CustomField>