unpackaged/main/default/objects/AcctSeed__Project__c/fields/PM_Different__c.field-meta.xml
<CustomField>
    <fullName>PM_Different__c</fullName>
    <formula>IF ( OPP_PM_ID__c =  PM_ID__c , 0, 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PM Different</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>