unpackaged/main/default/objects/AcctSeed__Project__c/fields/PM_ID__c.field-meta.xml
<CustomField>
    <fullName>PM_ID__c</fullName>
    <formula>AcctSeed__Project_Manager__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PM_ID</label>
    <type>Text</type>
</CustomField>