unpackaged/main/default/objects/AcctSeed__Project__c/fields/PM_Monthly_Quota__c.field-meta.xml
<CustomField>
    <fullName>PM_Monthly_Quota__c</fullName>
    <formula>AcctSeed__Project_Manager__r.Project_Manager_Monthly_Quota__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PM Monthly Quota</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>