unpackaged/main/default/objects/AcctSeed__Project__c/fields/PM_Notified_via_Email__c.field-meta.xml
<CustomField>
    <fullName>PM_Notified_via_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PM Notified via Email</label>
    <type>Checkbox</type>
</CustomField>