unpackaged/main/default/objects/AcctSeed__Project__c/fields/Project_CPE_LIC_Quantity_Completed__c.field-meta.xml
<CustomField>
    <fullName>Project_CPE_LIC_Quantity_Completed__c</fullName>
    <label>Project CPE/LIC Quantity Completed</label>
    <summarizedField>AcctSeed__Project_Task__c.Task_Quantity_Complete__c</summarizedField>
    <summaryForeignKey>AcctSeed__Project_Task__c.AcctSeed__Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>