unpackaged/main/default/objects/AcctSeed__Project__c/fields/Project_D_A_Date__c.field-meta.xml
<CustomField>
    <fullName>Project_D_A_Date__c</fullName>
    <description>This field contains the scheduled date to close out recipt of a Delivery &amp; Acceptance Certificate or Tech Work Order.</description>
    <inlineHelpText>This field contains the scheduled date to close out recipt of a Delivery &amp; Acceptance Certificate or Tech Work Order.</inlineHelpText>
    <label>Project D&amp;A Date</label>
    <type>Date</type>
</CustomField>