unpackaged/main/default/objects/AcctSeed__Project__c/fields/Project_Estimate_Cut_over_Date__c.field-meta.xml
<CustomField>
    <fullName>Project_Estimate_Cut_over_Date__c</fullName>
    <label>Project Estimate Cut-over Date</label>
    <type>Date</type>
</CustomField>