unpackaged/main/default/objects/AcctSeed__Project__c/fields/Project_Manager_OPS__c.field-meta.xml
<CustomField>
    <fullName>Project_Manager_OPS__c</fullName>
    <formula>AcctSeed__Opportunity__r.OP_Project_Manager__r.FirstName + " " + AcctSeed__Opportunity__r.OP_Project_Manager__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Manager Opportunity</label>
    <type>Text</type>
</CustomField>