unpackaged/main/default/objects/AcctSeed__Project__c/fields/Project_Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Project_Next_Steps__c</fullName>
    <label>Project Next Steps</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>