unpackaged/main/default/objects/AcctSeed__Project__c/fields/Project_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Project_Start_Date__c</fullName>
    <formula>AcctSeed__Opportunity__r.Project_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Start Date</label>
    <type>Date</type>
</CustomField>