unpackaged/main/default/objects/AcctSeed__Project__c/fields/Project_Status_Ops__c.field-meta.xml
<CustomField>
    <fullName>Project_Status_Ops__c</fullName>
    <formula>text(AcctSeed__Opportunity__r.Install_Status_Opp__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Status Ops</label>
    <type>Text</type>
</CustomField>