unpackaged/main/default/objects/AcctSeed__Project__c/fields/RollUp_Total_Time_Card_Hours__c.field-meta.xml
<CustomField>
    <fullName>RollUp_Total_Time_Card_Hours__c</fullName>
    <label>RollUp Total Time Card Hours</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>