unpackaged/main/default/objects/AcctSeed__Project__c/fields/Router_Technician__c.field-meta.xml
<CustomField>
    <fullName>Router_Technician__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Router Technician</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects2</relationshipName>
    <type>Lookup</type>
</CustomField>