unpackaged/main/default/objects/AcctSeed__Project__c/fields/Set_Default_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Set_Default_Schedule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Set Default Schedule</label>
    <type>Checkbox</type>
</CustomField>