unpackaged/main/default/objects/AcctSeed__Project__c/fields/SIS_Plan_URL__c.field-meta.xml
<CustomField>
    <fullName>SIS_Plan_URL__c</fullName>
    <label>SIS Plan URL</label>
    <type>Url</type>
</CustomField>