unpackaged/main/default/objects/AcctSeed__Project__c/fields/Task_Count_Inc__c.field-meta.xml
<CustomField>
    <fullName>Task_Count_Inc__c</fullName>
    <description>Summary count of the number of incomplete tasks.</description>
    <inlineHelpText>Summary count of the number of incomplete tasks.</inlineHelpText>
    <label>Task Count-Incomplete</label>
    <summaryFilterItems>
        <field>AcctSeed__Project_Task__c.AcctSeed__Percent_Complete__c</field>
        <operation>notEqual</operation>
        <value>100</value>
    </summaryFilterItems>
    <summaryForeignKey>AcctSeed__Project_Task__c.AcctSeed__Project__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>