unpackaged/main/default/objects/AcctSeed__Project__c/fields/Tech_Plan_URL__c.field-meta.xml
<CustomField>
    <fullName>Tech_Plan_URL__c</fullName>
    <label>Tech Plan URL</label>
    <type>Url</type>
</CustomField>