unpackaged/main/default/objects/AcctSeed__Project__c/fields/Template_Name__c.field-meta.xml
<CustomField>
    <fullName>Template_Name__c</fullName>
    <label>Template Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>