unpackaged/main/default/objects/AcctSeed__Project__c/recordTypes/AcctSeedERP__Manufacturing_Order.recordType-meta.xml
<RecordType>
    <fullName>AcctSeedERP__Manufacturing_Order</fullName>
    <active>true</active>
    <description>This record type is used for creating work orders in the Accounting Cloud ERP package</description>
    <label>Work Order</label>
</RecordType>