unpackaged/main/default/objects/AcctSeed__Project__c/recordTypes/AcctSeedERP__Project.recordType-meta.xml
<RecordType>
    <fullName>AcctSeedERP__Project</fullName>
    <active>true</active>
    <description>This record type is used for creating standard projects</description>
    <label>Project</label>
</RecordType>