unpackaged/main/default/objects/AcctSeed__Project__c/listViews/AcctSeed__Active.listView-meta.xml
<ListView>
    <fullName>AcctSeed__Active</fullName>
    <columns>NAME</columns>
    <columns>AcctSeed__Account__c</columns>
    <columns>AcctSeed__Status__c</columns>
    <columns>Project_Status_Ops__c</columns>
    <columns>RollUp_Total_Time_Card_Hours__c</columns>
    <columns>SIS_Plan_URL__c</columns>
    <columns>Project_Plan_URL__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AcctSeed__Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <filters>
        <field>Project_Status_Ops__c</field>
        <operation>notEqual</operation>
        <value>Complete</value>
    </filters>
    <filters>
        <field>AcctSeed__Template_Project__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Project_Status_Ops__c</field>
        <operation>notEqual</operation>
        <value>Canceled</value>
    </filters>
    <label>Active</label>
    <language>en_US</language>
</ListView>