unpackaged/main/default/objects/AcctSeed__Project__c/listViews/AcctSeed__All_Completed.listView-meta.xml
<ListView>
    <fullName>AcctSeed__All_Completed</fullName>
    <columns>NAME</columns>
    <columns>AcctSeed__Opportunity__c</columns>
    <columns>AcctSeed__Account__c</columns>
    <columns>AcctSeed__Status__c</columns>
    <columns>AcctSeed__Template_Project__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AcctSeed__Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </filters>
    <label>All Completed</label>
</ListView>