unpackaged/main/default/objects/AcctSeed__Project__c/listViews/AcctSeed__External.listView-meta.xml
<ListView>
    <fullName>AcctSeed__External</fullName>
    <columns>NAME</columns>
    <columns>AcctSeed__Opportunity__c</columns>
    <columns>AcctSeed__Account__c</columns>
    <columns>AcctSeed__Status__c</columns>
    <columns>AcctSeed__Template_Project__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AcctSeed__Account__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>External</label>
</ListView>