unpackaged/main/default/objects/AcctSeed__Project__c/listViews/AcctSeed__Templates.listView-meta.xml
<ListView>
    <fullName>AcctSeed__Templates</fullName>
    <columns>NAME</columns>
    <columns>AcctSeed__Account__c</columns>
    <columns>AcctSeed__Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AcctSeed__Template_Project__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Templates</label>
    <language>en_US</language>
</ListView>