unpackaged/main/default/objects/AcctSeed__Project__c/listViews/Active_Bobby_Presley.listView-meta.xml
<ListView>
    <fullName>Active_Bobby_Presley</fullName>
    <columns>NAME</columns>
    <columns>Opportunity_Ops_Category__c</columns>
    <columns>AcctSeed__Account__c</columns>
    <columns>Account_Alias__c</columns>
    <columns>AcctSeed__Opportunity__c</columns>
    <columns>Project_Status_Ops__c</columns>
    <columns>Project_Start_Date__c</columns>
    <columns>Estimated_Cut_over_Date__c</columns>
    <columns>Project_Manager_OPS__c</columns>
    <columns>Installer_1__c</columns>
    <columns>Installer_2__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project_Status_Ops__c</field>
        <operation>notEqual</operation>
        <value>Complete,Canceled</value>
    </filters>
    <filters>
        <field>AcctSeed__Template_Project__c</field>
        <operation>notEqual</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>AcctSeed__Project_Manager__c</field>
        <operation>equals</operation>
        <value>Bobby Presley</value>
    </filters>
    <label>Active - Bobby Presley</label>
    <language>en_US</language>
</ListView>